# etl-orchestrator

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  scheduler.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: main.py
app/api/routes/: data.py  pipeline.py
app/core/: config.py  exceptions.py  logging.py  middleware.py
app/infra/database/: connection.py  models.py  repository.py
app/schemas/: cotacao.py  pipeline.py
flows/: extract.py  load.py  pipeline.py  transform.py
tests/: conftest.py  test_extract.py  test_load.py  test_transform.py
