[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "etl-orchestrator"
version = "1.0.0"
description = "Pipeline ETL orquestrado para cotações financeiras com Prefect, FastAPI e PostgreSQL"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -p no:warnings"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["app", "flows"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false
warn_return_any = false
